Localization and compatibility update; new locales: cs-CZ, el, he-IL, pt-PT, sr, sv-SE, zh-CN

--- a/passwordexporter/chrome/locale/da-DK/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/da-DK/passwordexporter.dtd
@@ -10,15 +10,15 @@
 <!ENTITY passwordexporter.import-saved-desc "Importer gemte kodeord fra en XML- eller CSV-fil.">
 <!ENTITY passwordexporter.import-saved-button "Importer kodeord">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
-<!ENTITY passwordexporter.import-cancel "Cancel Import">
-<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
-<!ENTITY passwordexporter.import-complete "Import Complete">
-<!ENTITY passwordexporter.view-details "View Details">
-<!ENTITY passwordexporter.rejected-caption "Importer/eksporter afviste kodeord">
-<!ENTITY passwordexporter.rejected-desc "Importer/eksporter steder der aldrig gemmer dit kodeord.">
-<!ENTITY passwordexporter.rejected-export-button "Eksporter liste">
+<!ENTITY passwordexporter.import-cancel "Annuller import">
+<!ENTITY passwordexporter.import-cancelled "Import annulleret">
+<!ENTITY passwordexporter.import-complete "Import gennemført">
+<!ENTITY passwordexporter.view-details "Se detaljer">
+<!ENTITY passwordexporter.rejected-caption "Importer/eksporter deaktiverede login værter">
+<!ENTITY passwordexporter.rejected-desc "Importer/eksporter sider der aldrig gemmer dit kodeord.">
+<!ENTITY passwordexporter.rejected-export-button "Eksporter deaktiverede værter">
 <!ENTITY passwordexporter.rejected-export-button-accesskey "k">
-<!ENTITY passwordexporter.rejected-import-button "Importer liste">
+<!ENTITY passwordexporter.rejected-import-button "Importer deaktiverede værter">
 <!ENTITY passwordexporter.rejected-import-button-accesskey "m">
 <!ENTITY passwordexporter.view-passwords "Vis gemte kodeord">
 <!ENTITY passwordexporter.view-passwords-accesskey "V">
@@ -26,14 +26,14 @@
 <!ENTITY passwordexporter.notice-title "Password Exporter bemærkning">
 <!ENTITY passwordexporter.notice-line1 "Tak for at du valgte at installere Password Exporter!">
 <!ENTITY passwordexporter.notice-line2 "Før eksport bedes du bemærke:">
-<!ENTITY passwordexporter.notice-line3 "Denne udvidelse bruges på egen regning og risiko. Du kan komme ud for at at dine eksporterede kodeordsfiler bliver stjålet eller tilgået af andre mennesker, selv hvis du krypterer dem. Med nedenstående accept tilkendegiver du at du forstår risikoen og selv bærer det fulde ansvar for brugen af denne udvidelse.">
+<!ENTITY passwordexporter.notice-line3 "Denne udvidelse bruges på egen regning og risiko. Du kan komme ud for at at dine eksporterede kodeordsfiler bliver stjålet eller tilgået af andre mennesker, selv hvis du krypterer dem. Med nedenstående accept tilkendegiver du, at du forstår risikoen og selv bærer det fulde ansvar for brugen af denne udvidelse.">
 <!ENTITY passwordexporter.notice-accept "Jeg accepterer">
 <!ENTITY passwordexporter.notice-accept-accesskey "a">
 <!ENTITY passwordexporter.notice-decline "Jeg accepterer IKKE">
 <!ENTITY passwordexporter.notice-decline-accesskey "I">
-<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
-<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
-<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
-<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
-<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
-<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Eksport-detaljer">
+<!ENTITY passwordexporter.export-details-line1 "Gemte logins eksporteres ikke når de ikke kan tilgås korrekt. Dette er oftest på grund af ændringer i din signons.txt eller key3.db filer.">
+<!ENTITY passwordexporter.export-details-line2 "Følgende logins kunne ikke eksporteres:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import-detaljer">
+<!ENTITY passwordexporter.import-details-line1 "Gemte logins kan ofte ikke importeres når det samme login allerede findes i Gemte kodeord.">
+<!ENTITY passwordexporter.import-details-line2 "Følgende logins kunne ikke importeres:">
