--- a/passwordexporter/chrome/locale/da-DK/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/da-DK/passwordexporter.properties
@@ -11,10 +11,10 @@ passwordexporter.alert-passwords-failed=%S kodeord kunne ikke eksporteres.
 passwordexporter.show-details=Vis detaljer
 passwordexporter.filepicker-save-xml=Kodeordseksport (.xml)
 passwordexporter.filepicker-save-csv=Kodeordseksport (.csv)
-passwordexporter.alert-wrong-file-reject=Dette er en afviste kodeord fil. Brug venligst Importér liste-knappen herunder til at importere filen.
+passwordexporter.alert-wrong-file-reject=Dette er en deaktiverede login værter-fil. Brug venligst Importér Deaktiverede Værter-knappen herunder til at importere filen.
 passwordexporter.alert-passwords-imported=Gemte kodeord er blevet importeret korrekt!
 passwordexporter.filepicker-open-xmlcsv=Kodeordseksporter (.xml, .csv)
-passwordexporter.alert-rejected-exported=Afvist-listen er blevet eksporteret korrekt.
+passwordexporter.alert-rejected-exported=Deaktiverede logins-listen er blevet eksporteret korrekt.
 passwordexporter.alert-wrong-file-saved=Dette er en gemte kodeord-fil. Brug venligst Import-knappen herover for at importere denne fil.
-passwordexporter.alert-rejected-imported=Afvist-liste korrekt importeret!
-passwordexporter.filepicker-open-xml=Password Exports (.xml)
+passwordexporter.alert-rejected-imported=Deaktiverede logins-listen korrekt importeret!
+passwordexporter.filepicker-open-xml=Kodeordseksporter (.xml)
