--- a/passwordexporter/chrome/locale/fa-IR/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/fa-IR/passwordexporter.properties
@@ -1,20 +1,20 @@
-extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=ایمپورت و اکسپورت گذر واژه های شما
+extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=وارد/صادرکردن رمزهای عبور شما
 passwordexporter.name=Password Exporter
-passwordexporter.button-label=ایمپورت/اکسپورت گذر واژه ها
-passwordexporter.button-accesskey=ا
-passwordexporter.filepicker-title=انتخاب یک فایل
-passwordexporter.alert-cannot-import=ایمپورت از این فایل امکان پذیر نیست.
-passwordexporter.alert-xml-error=خطا در تجزیه XML.ایمپورت کلمات عبور امکانپذیر نیست.
-passwordexporter.alert-wrong-version=نسخه برنامه ای که این فایل را اکسپورت کرده است از نسخه موجود روی این کامپیوتر جدیدتر است.برنامه را به آخرین نسخه ارتقا دهید
-passwordexporter.alert-passwords-exported=.کلمه عبور با موفقیت اکسپورت شد %S
-passwordexporter.alert-passwords-failed=.کلمه عبور وجود ندارد %S امکان اکسپورت کردن
+passwordexporter.button-label=وارد/صادرکردن رمزهای عبور
+passwordexporter.button-accesskey=و
+passwordexporter.filepicker-title=انتخاب یک پرونده
+passwordexporter.alert-cannot-import=وارد‌کردن رمزهای عبور از این پرونده امکان پذیر نیست.
+passwordexporter.alert-xml-error=خطا در تجزیه XML.واردکردن رمزهای عبور امکان‌پذیر نیست.
+passwordexporter.alert-wrong-version=نسخه برنامه‌ای که این پرونده را صادرکرده‌است از نسخهٔ موجود روی این کامپیوتر جدیدتر است.برنامه را به آخرین نسخه ارتقا دهید
+passwordexporter.alert-passwords-exported=%S رمزعبور با موفقیت صادر‌شد
+passwordexporter.alert-passwords-failed=رمزعبوری ذخیره نشده و به این خاطر صادرکردن امکان‌پذیر نیست.
 passwordexporter.show-details=نمایش جزئیات
-passwordexporter.filepicker-save-xml=(.xml) اکسپورت کلمه عبور
-passwordexporter.filepicker-save-csv=(.csv) اکسپورت کلمه عبور
-passwordexporter.alert-wrong-file-reject=این فایل شامل کلمات عبور رد شده است.برای ایمپورت این فایل از کلید ایمپورت لیست استفاده کنید
-passwordexporter.alert-passwords-imported=.کلمات عبور ذخیره شده با موفقیت ایمپورت شدند
-passwordexporter.filepicker-open-xmlcsv=اکسپورت کلمه عبور
-passwordexporter.alert-rejected-exported=.لیست کلمات عبور رد شده با موفقیت اکسپورت شد
-passwordexporter.alert-wrong-file-saved=این فایل شامل کلمات عبور ذخیره شده است.برای ایمپورت آن از کلید ایمپورت استفاده کنید
-passwordexporter.alert-rejected-imported=.لیست کلمات عبور رد شده با موفقیت ایمپورت شد
+passwordexporter.filepicker-save-xml=(.xml) رمزهای عبور
+passwordexporter.filepicker-save-csv=(.csv) رمزهای عبور
+passwordexporter.alert-wrong-file-reject=این پرونده شامل رمزهای‌عبور غیرفعال است.برای واردکردن این پرونده دگمه واردکردن فهرست را کلیک کنید
+passwordexporter.alert-passwords-imported=رمزهای‌عبور ذخیره‌شده با موفقیت وارد شدند.
+passwordexporter.filepicker-open-xmlcsv=رمزهای عبور
+passwordexporter.alert-rejected-exported=فهرست رمزهای‌ عبور رد شده با موفقیت صادر شد.
+passwordexporter.alert-wrong-file-saved=این پرونده شامل رمزهای‌عبور ذخیره‌شده است.برای واردکردن آنها دگمه واردکردن را کلیک کنید
+passwordexporter.alert-rejected-imported=فهرست رمزهای عبور غیرفعال با موفقیت وارد شد.
 passwordexporter.filepicker-open-xml=Password Exports (.xml)
