--- a/passwordexporter/chrome/locale/hu-HU/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/hu-HU/passwordexporter.dtd
@@ -36,4 +36,4 @@
 <!ENTITY passwordexporter.export-details-line2 "A következő belépések nem exportálhatók:">
 <!ENTITY passwordexporter.import-details-title "Password Expoter: Importálás részletei">
 <!ENTITY passwordexporter.import-details-line1 "Az elmentett bejelentkezések nem importálhatók, ha már azonos bejelentkezés létezik a Jelszókezelőben.">
-<!ENTITY passwordexporter.import-details-line2 "A következő belépések nem importálhatók:">
+<!ENTITY passwordexporter.import-details-line2 "A következő bejelentkezések nem importálhatók:">
