--- a/passwordexporter/chrome/locale/it-IT/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/it-IT/passwordexporter.dtd
@@ -4,36 +4,36 @@
 <!ENTITY passwordexporter.export-saved-desc "Esporta le password salvate in un file XML/CSV">
 <!ENTITY passwordexporter.export-saved-encrypt "Cifra nomi utente e password">
 <!ENTITY passwordexporter.export-saved-encrypt-accesskey "C">
-<!ENTITY passwordexporter.export-saved-button "Esporta le password">
+<!ENTITY passwordexporter.export-saved-button "Esporta password">
 <!ENTITY passwordexporter.export-saved-button-accesskey "E">
 <!ENTITY passwordexporter.import-saved-caption "Importazione password salvate">
 <!ENTITY passwordexporter.import-saved-desc "Importa le password salvate in un file XML/CSV">
-<!ENTITY passwordexporter.import-saved-button "Importa le password">
+<!ENTITY passwordexporter.import-saved-button "Importa password">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
-<!ENTITY passwordexporter.import-cancel "Cancel Import">
-<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
-<!ENTITY passwordexporter.import-complete "Import Complete">
-<!ENTITY passwordexporter.view-details "View Details">
-<!ENTITY passwordexporter.rejected-caption "Importazione/Esportazione password non salvate">
-<!ENTITY passwordexporter.rejected-desc "Importa/Esporta i siti che non salvano le password">
-<!ENTITY passwordexporter.rejected-export-button "Esporta la lista">
+<!ENTITY passwordexporter.import-cancel "Annulla importazione">
+<!ENTITY passwordexporter.import-cancelled "Importazione annullata">
+<!ENTITY passwordexporter.import-complete "Importazione completata">
+<!ENTITY passwordexporter.view-details "Visualizza dettagli">
+<!ENTITY passwordexporter.rejected-caption "Importazione/Esportazione lista eccezioni">
+<!ENTITY passwordexporter.rejected-desc "Importa/Esporta la lista dei siti che non salvano le informazioni di login">
+<!ENTITY passwordexporter.rejected-export-button "Esporta lista">
 <!ENTITY passwordexporter.rejected-export-button-accesskey "S">
-<!ENTITY passwordexporter.rejected-import-button "Importa la lista">
+<!ENTITY passwordexporter.rejected-import-button "Importa lista">
 <!ENTITY passwordexporter.rejected-import-button-accesskey "m">
-<!ENTITY passwordexporter.view-passwords "Mostra le password salvate">
-<!ENTITY passwordexporter.view-passwords-accesskey "V">
+<!ENTITY passwordexporter.view-passwords "Mostra password...">
+<!ENTITY passwordexporter.view-passwords-accesskey "o">
 <!ENTITY passwordexporter.close-label "Chiudi">
 <!ENTITY passwordexporter.notice-title "Avviso di Password Exporter">
 <!ENTITY passwordexporter.notice-line1 "Grazie per aver installato Password Exporter!">
-<!ENTITY passwordexporter.notice-line2 "Considerazioni prima dell&apos;utilizzo">
+<!ENTITY passwordexporter.notice-line2 "Considerazioni prima dell'utilizzo">
 <!ENTITY passwordexporter.notice-line3 "Questa estensione viene utilizzata a proprio rischio e pericolo. Le password memorizzate nel file, anche se cifrate, potrebbero essere facilmente sottratte oppure lette da terzi">
 <!ENTITY passwordexporter.notice-accept "Accetto">
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
-<!ENTITY passwordexporter.notice-decline "Rifiuto">
-<!ENTITY passwordexporter.notice-decline-accesskey "R">
-<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
-<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
-<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
-<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
-<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
-<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
+<!ENTITY passwordexporter.notice-decline "Non accetto">
+<!ENTITY passwordexporter.notice-decline-accesskey "N">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: dettagli esportazione">
+<!ENTITY passwordexporter.export-details-line1 "Le informazioni di login non vengono esportate nel caso non siano correttamente accessibili. Questo fatto è di solito collegato a modifiche dei propri file signonsX.txt o key3.db.">
+<!ENTITY passwordexporter.export-details-line2 "Le seguenti informazioni di login non possono essere esportate:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: dettagli importazione">
+<!ENTITY passwordexporter.import-details-line1 "Il importazione delle informazioni di login fallisce di solito quando le stesse informazioni sono già presenti in Gestione password">
+<!ENTITY passwordexporter.import-details-line2 "Le seguenti informazioni di login non possono essere importate:">
