--- a/passwordexporter/chrome/locale/pl-PL/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/pl-PL/passwordexporter.dtd
@@ -2,7 +2,7 @@
 <!ENTITY passwordexporter.dialog-title "Import/Eksport informacji o logowaniu">
 <!ENTITY passwordexporter.export-saved-caption "Eksport informacji">
 <!ENTITY passwordexporter.export-saved-desc "Eksport informacji do pliku XML/CSV">
-<!ENTITY passwordexporter.export-saved-encrypt "Zakoduj informacje">
+<!ENTITY passwordexporter.export-saved-encrypt "Szyfruj informacje">
 <!ENTITY passwordexporter.export-saved-encrypt-accesskey "Z">
 <!ENTITY passwordexporter.export-saved-button "Eksportuj">
 <!ENTITY passwordexporter.export-saved-button-accesskey "E">
@@ -10,10 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Import informacji z pliku XML/CSV">
 <!ENTITY passwordexporter.import-saved-button "Importuj">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
-<!ENTITY passwordexporter.import-cancel "Anuluj importowanie">
+<!ENTITY passwordexporter.import-cancel "Anuluj">
 <!ENTITY passwordexporter.import-cancelled "Importowanie zostało anulowane">
 <!ENTITY passwordexporter.import-complete "Importowanie zostało zakończone">
-<!ENTITY passwordexporter.view-details "Zobacz szczegóły">
+<!ENTITY passwordexporter.view-details "Szczegóły">
 <!ENTITY passwordexporter.rejected-caption "Import/Eksport wyjątków">
 <!ENTITY passwordexporter.rejected-desc "Import/Eksport adresów witryn, dla których nie są zapisywane informacje o logowaniu">
 <!ENTITY passwordexporter.rejected-export-button "Eksportuj">
@@ -25,8 +25,8 @@
 <!ENTITY passwordexporter.close-label "Zamknij">
 <!ENTITY passwordexporter.notice-title "Password Exporter - informacje">
 <!ENTITY passwordexporter.notice-line1 "Dziękuję za pobranie Password Exporter!">
-<!ENTITY passwordexporter.notice-line2 "Przed wykonaniem eksportu proszę zapoznać się z poniższymi uwagami">
-<!ENTITY passwordexporter.notice-line3 "Rozszerzenie to używasz na swoją odpowiedzialność. Może zdarzyć się, że wyeksportowane przez ciebie dane logowania zostaną skradzione lub użyte przez niepowołane osoby, nawet jeśli je zakodujesz.">
+<!ENTITY passwordexporter.notice-line2 "Przed wykonaniem eksportu proszę zapoznać się z poniższymi uwagami:">
+<!ENTITY passwordexporter.notice-line3 "Rozszerzenie to używasz na swoją odpowiedzialność. Może zdarzyć się, że wyeksportowane przez ciebie dane logowania zostaną skradzione lub użyte przez niepowołane osoby, nawet jeśli je zaszyfrujesz.">
 <!ENTITY passwordexporter.notice-accept "Akceptuję">
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
 <!ENTITY passwordexporter.notice-decline "Nie akceptuję">
