--- a/passwordexporter/chrome/locale/tr-TR/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/tr-TR/passwordexporter.dtd
@@ -1,11 +1,11 @@
 <!ENTITY passwordexporter.name "Password Exporter">
 <!ENTITY passwordexporter.dialog-title "Parolaları Al/Ver">
-<!ENTITY passwordexporter.export-saved-caption "Parolaları Dışa Aktar">
+<!ENTITY passwordexporter.export-saved-caption "Parolaları Dışarı Aktar">
 <!ENTITY passwordexporter.export-saved-desc "Parolaları bir XML/CSV Dosysasına Aktar.">
 <!ENTITY passwordexporter.export-saved-encrypt "Kullanıcı Adları ve Parolaları şifrele">
 <!ENTITY passwordexporter.export-saved-encrypt-accesskey "n">
 <!ENTITY passwordexporter.export-saved-button "Parolaları Aktar">
-<!ENTITY passwordexporter.export-saved-button-accesskey "V">
+<!ENTITY passwordexporter.export-saved-button-accesskey "E">
 <!ENTITY passwordexporter.import-saved-caption "Kayıtlı Parolaları Al">
 <!ENTITY passwordexporter.import-saved-desc "Parolaları bir XML/CSV Dosysasından Al.">
 <!ENTITY passwordexporter.import-saved-button "Parolaları Al">
@@ -24,7 +24,7 @@
 <!ENTITY passwordexporter.view-passwords-accesskey "G">
 <!ENTITY passwordexporter.close-label "Kapat">
 <!ENTITY passwordexporter.notice-title "Password Exporter Duyuruları">
-<!ENTITY passwordexporter.notice-line1 "Password Exporter&apos;i Yüklediğiniz için Teşekkürler!">
+<!ENTITY passwordexporter.notice-line1 "Password Exporter'i Yüklediğiniz için Teşekkürler!">
 <!ENTITY passwordexporter.notice-line2 "Dışa Aktarmadan Önce Unutmayın :">
 <!ENTITY passwordexporter.notice-line3 "Bu eklentiyi kullanmak sizin Sorumluluğunuzdadır. Dışa Aktardığınız Parola Dosyalarınız, eğer şifrelemezseniz başkaları tarafından okunabilir. Parolalarınızı mutlaka şifreleyiniz.">
 <!ENTITY passwordexporter.notice-accept "Kabul Ediyorum">
