--- a/passwordexporter/chrome/locale/fa-IR/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/fa-IR/passwordexporter.dtd
@@ -1,39 +1,39 @@
 <!ENTITY passwordexporter.name "Password Exporter">
-<!ENTITY passwordexporter.dialog-title "ایمپورت/اکسپورت کلمات عبور">
-<!ENTITY passwordexporter.export-saved-caption "اکسپورت کلمات عبور ذخیره شده">
-<!ENTITY passwordexporter.export-saved-desc "XML/CSV اکسپورت پسوردهای ذخیره شده در یک فایل">
-<!ENTITY passwordexporter.export-saved-encrypt "رمزدار کردن نام های کاربری/کلمات عبور">
-<!ENTITY passwordexporter.export-saved-encrypt-accesskey "n">
-<!ENTITY passwordexporter.export-saved-button "اکسپورت پسوردها">
-<!ENTITY passwordexporter.export-saved-button-accesskey "E">
-<!ENTITY passwordexporter.import-saved-caption "ایمپورت کلمات عبور ذخیره شده">
-<!ENTITY passwordexporter.import-saved-desc "XML/CSV ایمپورت پسوردهای ذخیره شده از یک فایل">
-<!ENTITY passwordexporter.import-saved-button "ایمپورت کلمات عبور">
-<!ENTITY passwordexporter.import-saved-button-accesskey "I">
-<!ENTITY passwordexporter.import-cancel "Cancel Import">
-<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
-<!ENTITY passwordexporter.import-complete "Import Complete">
-<!ENTITY passwordexporter.view-details "View Details">
-<!ENTITY passwordexporter.rejected-caption "ایمپورت/اکسپورت کلمات عبور رد شده">
-<!ENTITY passwordexporter.rejected-desc ".ایمپورت/اکسپورت سایت هایی که نباید کلمه عبور شما را ذخیره کنند">
-<!ENTITY passwordexporter.rejected-export-button "اکسپورت لیست">
-<!ENTITY passwordexporter.rejected-export-button-accesskey "x">
-<!ENTITY passwordexporter.rejected-import-button "ایمپورت لیست">
-<!ENTITY passwordexporter.rejected-import-button-accesskey "m">
-<!ENTITY passwordexporter.view-passwords "نمایش کلمات عبور ذخیره شده">
-<!ENTITY passwordexporter.view-passwords-accesskey "V">
+<!ENTITY passwordexporter.dialog-title "وارد/صادرکردن رمزهای عبور">
+<!ENTITY passwordexporter.export-saved-caption "صادرکردن رمزهای عبور ذخیره شده">
+<!ENTITY passwordexporter.export-saved-desc "صادرکردن رمزهای عبور ذخیره‌شده در یک پرونده XML/CSV">
+<!ENTITY passwordexporter.export-saved-encrypt "رمزنگاری نام‌های کاربری/رمزهای عبور">
+<!ENTITY passwordexporter.export-saved-encrypt-accesskey "ر">
+<!ENTITY passwordexporter.export-saved-button "صادرکردن رمزهای عبور">
+<!ENTITY passwordexporter.export-saved-button-accesskey "ص">
+<!ENTITY passwordexporter.import-saved-caption "واردکردن رمزهای عبور ذخیره‌شده">
+<!ENTITY passwordexporter.import-saved-desc "واردکردن رمزهای عبور ذخیره‌شده از یک پرونده XML/CSV">
+<!ENTITY passwordexporter.import-saved-button "واردکردن رمزهای عبور">
+<!ENTITY passwordexporter.import-saved-button-accesskey "و">
+<!ENTITY passwordexporter.import-cancel "انصراف واردکردن">
+<!ENTITY passwordexporter.import-cancelled "واردکردن لغوشد">
+<!ENTITY passwordexporter.import-complete "واردکردن پایان یافت">
+<!ENTITY passwordexporter.view-details "نمایش جزئیات">
+<!ENTITY passwordexporter.rejected-caption "وارد/صادرکردن رمزهای عبور غیرفعال">
+<!ENTITY passwordexporter.rejected-desc "وارد/صادرکردن وب‌گاه‌هایی که مجاز به ذخیره‌کردن رمزعبور شما نیستند.">
+<!ENTITY passwordexporter.rejected-export-button "فهرست صادرکردن">
+<!ENTITY passwordexporter.rejected-export-button-accesskey "ص">
+<!ENTITY passwordexporter.rejected-import-button "فهرست واردکردن">
+<!ENTITY passwordexporter.rejected-import-button-accesskey "و">
+<!ENTITY passwordexporter.view-passwords "نمایش رمزهای عبور ذخیره‌شده">
+<!ENTITY passwordexporter.view-passwords-accesskey "ذ">
 <!ENTITY passwordexporter.close-label "بستن">
 <!ENTITY passwordexporter.notice-title "هشدار برنامه">
-<!ENTITY passwordexporter.notice-line1 ".برای دانلود این برنامه از شما متشکریم">
-<!ENTITY passwordexporter.notice-line2 ":قبل از اکسپورت توجه کنید">
-<!ENTITY passwordexporter.notice-line3 ".اکسپورت کلمات عبور با مسئولیت خودتان انجام می شود.ممکن است کلمات عبور شما در دسترس دیگران قرار بگیرد">
-<!ENTITY passwordexporter.notice-accept "تایید">
-<!ENTITY passwordexporter.notice-accept-accesskey "A">
+<!ENTITY passwordexporter.notice-line1 "برای بارگیری و نصب این برنامه از شما سپاسگزاریم.">
+<!ENTITY passwordexporter.notice-line2 "لطفاً پیش از صادرکردن توجه کنید:">
+<!ENTITY passwordexporter.notice-line3 "صادرکردن رمزهای عبور با مسئولیت شما انجام می‌شود.این رمزهای عبور ممکن است در دسترس دیگران قرار بگیرد.">
+<!ENTITY passwordexporter.notice-accept "تأیید">
+<!ENTITY passwordexporter.notice-accept-accesskey "ت">
 <!ENTITY passwordexporter.notice-decline "انصراف">
-<!ENTITY passwordexporter.notice-decline-accesskey "D">
-<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
-<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
-<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
-<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
-<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
-<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
+<!ENTITY passwordexporter.notice-decline-accesskey "ا">
+<!ENTITY passwordexporter.export-details-title "صادرکننده رمزهای عبور: جرئیات صادرات">
+<!ENTITY passwordexporter.export-details-line1 "در صورت دردسترس نبودن مناسب رمزهای عبور ذخیره شده٬ صدور آنها با مشکل مواجه می‌شود. این مشکل معمولاً در رابطه تغییرات در پروندهای signons.txt یا key3.db بوجود می‌آید.">
+<!ENTITY passwordexporter.export-details-line2 "رمزهای عبور زیر صادر نشدند:">
+<!ENTITY passwordexporter.import-details-title "صادرکننده رمزهای عبور: جرئیات واردکردن">
+<!ENTITY passwordexporter.import-details-line1 "رمزهای عبور ذخیره‌شده معمولاً در هنگامی که پیشتر در مدیریت رمزهای عبور ذخیره‌شده باشند٬ وارد نخواهند شد.">
+<!ENTITY passwordexporter.import-details-line2 "رمزهای عبور زیر وارد نشدند:">
