--- a/passwordexporter/chrome/locale/it-IT/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/it-IT/passwordexporter.properties
@@ -1,8 +1,8 @@
-extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=Permette di esportare/importare le password memorizzate tra diversi computer
+extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=Permette di esportare/importare le password memorizzate e la lista dei siti che non salvano le informazioni di login
 passwordexporter.name=Password Exporter
-passwordexporter.button-label=Importa/esporta le password
+passwordexporter.button-label=Importa/esporta password
 passwordexporter.button-accesskey=i
-passwordexporter.filepicker-title=Selezione di un file
+passwordexporter.filepicker-title=Seleziona un file
 passwordexporter.alert-cannot-import=Impossibile importare da questo file
 passwordexporter.alert-xml-error=Errore durante l'analisi XML. Le password non saranno importate
 passwordexporter.alert-wrong-version=La versione di Password Exporter utilizzata per esportare questo file è più recente della versione presente su questo computer. È necessario aggiornare all'ultima versione per importare correttamente
@@ -11,10 +11,10 @@ passwordexporter.alert-passwords-failed=%S password non possono essere esportate
 passwordexporter.show-details=Mostra dettagli
 passwordexporter.filepicker-save-xml=Password esportate (.xml)
 passwordexporter.filepicker-save-csv=Password esportate (.csv)
-passwordexporter.alert-wrong-file-reject=Questo file contiene le password non salvate. Utilizzare la funzione di importazione
+passwordexporter.alert-wrong-file-reject=Questo file contiene i siti per i quali non vengono salvate le informazioni di login. Utilizzare il pulsante Importa lista per aggiungerle alle Eccezioni
 passwordexporter.alert-passwords-imported=Le password salvate sono state importate con successo
 passwordexporter.filepicker-open-xmlcsv=Password esportate (.xml, .csv)
 passwordexporter.alert-rejected-exported=La lista delle password non salvate è stata esportata con successo
-passwordexporter.alert-wrong-file-saved=Questo file contiene le password salvate. Utilizzare la funzione di importazione
+passwordexporter.alert-wrong-file-saved=Questo file contiene le password salvate. Utilizzare il pulsante Importa password per aggiungerle alle proprie
 passwordexporter.alert-rejected-imported=La lista delle password non salvate è stata importata con successo
-passwordexporter.filepicker-open-xml=Password Exports (.xml)
+passwordexporter.filepicker-open-xml=Password esportate (.xml)
